// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-category-widget Rendering should render clear button when canClear is true and an option is selected 1`] = `
<as-dropdown
  class="hydrated"
>
  
  <div
    class="as-dropdown can-clear"
  >
    <button
      aria-haspopup="true"
      class="dropdown--control as-body"
    >
      Option 2
      <div
        class="dropdown--icon"
      >
        <svg
          viewBox="2 6 12 6"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.30988427,11.1237193 L7.69011573,11.1237193 L15.2195214,4.12372525 C15.415115,3.94188438 15.7124148,3.96294311 15.8835591,4.17076125 C16.0547035,4.37857939 16.0348835,4.69446043 15.83929,4.8763013 L8.30988427,11.8762953 C8.13246042,12.041244 7.86753958,12.041244 7.69011573,11.8762953 L0.160710032,4.8763013 C-0.034883519,4.69446043 -0.0547035068,4.37857939 0.116440851,4.17076125 C0.287585208,3.96294311 0.584885024,3.94188438 0.780478575,4.12372525 L8.30988427,11.1237193 Z"
          />
        </svg>
      </div>
    </button>
    <ul
      class="dropdown--list"
      tabindex="-1"
    >
      <li
        class="dropdown--list-item"
        data-value="Option 1"
      >
        <button
          class="as-body"
        >
          Option 1
        </button>
      </li>
      <li
        class="dropdown--list-item"
        data-value="Option 2"
      >
        <button
          class="as-body is-selected"
        >
          Option 2
        </button>
      </li>
      <li
        class="dropdown--list-item"
        data-value="Option 3"
      >
        <button
          class="as-body"
        >
          Option 3
        </button>
      </li>
    </ul>
    <button
      class="dropdown--clear"
    >
      <svg
        viewBox="2 2 12 12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,8.58232323 L1.70292632,14.8793969 C1.5421222,15.040201 1.28140721,15.040201 1.12060309,14.8793969 C0.95979897,14.7185928 0.95979897,14.4578778 1.12060309,14.2970737 L7.41767677,8 L1.12060309,1.70292632 C0.95979897,1.5421222 0.95979897,1.28140721 1.12060309,1.12060309 C1.28140721,0.95979897 1.5421222,0.95979897 1.70292632,1.12060309 L8,7.41767677 L14.2970737,1.12060309 C14.4578778,0.95979897 14.7185928,0.95979897 14.8793969,1.12060309 C15.040201,1.28140721 15.040201,1.5421222 14.8793969,1.70292632 L8.58232323,8 L14.8793969,14.2970737 C15.040201,14.4578778 15.040201,14.7185928 14.8793969,14.8793969 C14.7185928,15.040201 14.4578778,15.040201 14.2970737,14.8793969 L8,8.58232323 Z"
        />
      </svg>
    </button>
  </div>
</as-dropdown>
`;

exports[`as-category-widget Rendering should render properly 1`] = `
<as-dropdown
  class="hydrated"
>
  
  <div
    class="as-dropdown"
  >
    <button
      aria-haspopup="true"
      class="dropdown--control as-body"
    >
      Option 2
      <div
        class="dropdown--icon"
      >
        <svg
          viewBox="2 6 12 6"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.30988427,11.1237193 L7.69011573,11.1237193 L15.2195214,4.12372525 C15.415115,3.94188438 15.7124148,3.96294311 15.8835591,4.17076125 C16.0547035,4.37857939 16.0348835,4.69446043 15.83929,4.8763013 L8.30988427,11.8762953 C8.13246042,12.041244 7.86753958,12.041244 7.69011573,11.8762953 L0.160710032,4.8763013 C-0.034883519,4.69446043 -0.0547035068,4.37857939 0.116440851,4.17076125 C0.287585208,3.96294311 0.584885024,3.94188438 0.780478575,4.12372525 L8.30988427,11.1237193 Z"
          />
        </svg>
      </div>
    </button>
    <ul
      class="dropdown--list"
      tabindex="-1"
    >
      <li
        class="dropdown--list-item"
        data-value="Option 1"
      >
        <button
          class="as-body"
        >
          Option 1
        </button>
      </li>
      <li
        class="dropdown--list-item"
        data-value="Option 2"
      >
        <button
          class="as-body is-selected"
        >
          Option 2
        </button>
      </li>
      <li
        class="dropdown--list-item"
        data-value="Option 3"
      >
        <button
          class="as-body"
        >
          Option 3
        </button>
      </li>
    </ul>
    
  </div>
</as-dropdown>
`;

exports[`as-category-widget Rendering should show defaultText when there is no selected option 1`] = `
<as-dropdown
  class="hydrated"
>
  
  <div
    class="as-dropdown"
  >
    <button
      aria-haspopup="true"
      class="dropdown--control as-body"
    >
      Dropdown
      <div
        class="dropdown--icon"
      >
        <svg
          viewBox="2 6 12 6"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.30988427,11.1237193 L7.69011573,11.1237193 L15.2195214,4.12372525 C15.415115,3.94188438 15.7124148,3.96294311 15.8835591,4.17076125 C16.0547035,4.37857939 16.0348835,4.69446043 15.83929,4.8763013 L8.30988427,11.8762953 C8.13246042,12.041244 7.86753958,12.041244 7.69011573,11.8762953 L0.160710032,4.8763013 C-0.034883519,4.69446043 -0.0547035068,4.37857939 0.116440851,4.17076125 C0.287585208,3.96294311 0.584885024,3.94188438 0.780478575,4.12372525 L8.30988427,11.1237193 Z"
          />
        </svg>
      </div>
    </button>
    <ul
      class="dropdown--list"
      tabindex="-1"
    >
      <li
        class="dropdown--list-item"
        data-value="Option 1"
      >
        <button
          class="as-body"
        >
          Option 1
        </button>
      </li>
      <li
        class="dropdown--list-item"
        data-value="Option 2"
      >
        <button
          class="as-body"
        >
          Option 2
        </button>
      </li>
      <li
        class="dropdown--list-item"
        data-value="Option 3"
      >
        <button
          class="as-body"
        >
          Option 3
        </button>
      </li>
    </ul>
    
  </div>
</as-dropdown>
`;
